manifests/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: plenartrend-frontend
  namespace: plenartrend
spec:
  selector:
    app: plenartrend-frontend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
