manifests/frontend/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plenartrend-frontend
  namespace: plenartrend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plenartrend.de
    - www.plenartrend.de
    secretName: plenartrend-tls
  rules:
  - host: plenartrend.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plenartrend-frontend
            port:
              number: 80
  - host: www.plenartrend.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plenartrend-frontend
            port:
              number: 80
